Fixed some layout issues, added top-bar (dumb edition)

--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -1,17 +1,9 @@
 body {
     margin: 0;
-    padding: 0;
+    padding: 0;    
     background-color: #EAECEE;
     font-family: Verdana, sans-serif;
     font-size: 0.9em;
-}
-#container {
-    margin: 0 auto;
-    padding: 0 20px 10px 20px;
-    border: 1px solid #666666;
-    width: 865px; /* subtract 40px from banner width for padding */
-    background: #FFFFFF url(#{request.contextPath}/resources/gfx/hbanner.png) no-repeat;
-    padding-top: 110px;
 }
 #sidebar {
     font-size: 0.9em;
